Update to Spring AI 2.0.0